wip: translate and create component

--- a/src/app/views/public/quiz/quiz/quiz.component.html
+++ b/src/app/views/public/quiz/quiz/quiz.component.html
@@ -1,2 +1,10 @@
-<p>quiz works!</p>
-<router-outlet></router-outlet>
+<div class="quiz-main">
+  <div class="quiz-image">
+    <img src="assets/images/galaxy.jpg" alt="galaxy">
+  </div>
+  <div class="quiz-form-container">
+    <div class="quiz-form-main">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
