--- a/src/app/views/public/quiz/form/form/form.component.scss
+++ b/src/app/views/public/quiz/form/form/form.component.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 :host {
   display: flex;
   flex-direction: column;
@@ -6,4 +8,49 @@
   width: 100%;
   height: 90%;
   overflow: auto;
+}
+
+.quiz-form-main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 4rem;
+  position: relative;
+  gap: 2rem;
+
+  .quiz-form-progress {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    .quiz-form-progress-icons {
+      display: flex;
+      gap: 0.5rem;
+      justify-content: space-between;
+
+      .progress-icon {
+        flex: 1;
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 2.5rem;
+        width: 2.5rem;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
+        background-image: linear-gradient(to right, $primary, $secondary);
+        opacity: 0.3;
+      }
+
+      .active {
+        opacity: 1 !important;
+      }
+    }
+  }
+
+  .quiz-form-router {
+    flex: 1;
+  }
 }
