--- a/src/app/views/public/quiz/form/translate/translate/translate.component.scss
+++ b/src/app/views/public/quiz/form/translate/translate/translate.component.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 :host {
   font-family: 'Cera Bold', sans-serif !important;
   display: flex;
@@ -13,11 +15,10 @@ form {
   justify-content: start;
   width: 100%;
   height: 100%;
-  padding: 0 4rem 4rem;
-  gap: 4rem;
+  gap: 1rem;
 
   img {
-    height: 100px;
+    height: 50px;
   }
 
   .form-translate-title {
@@ -29,7 +30,7 @@ form {
       color: transparent;
       background-clip: text;
       -webkit-background-clip: text;
-      background-image: linear-gradient(to right, #ec4899, #a855f7);
+      background-image: linear-gradient(to right, $primary, $secondary);
     }
 
     p {
