--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,5 @@
-$primary: #fca311; // used pallet color
-$secondary: #14213d; // used pallet color
+$primary: #6B3BA3; // used pallet color
+$secondary: #1E1F58; // used pallet color
 
 $blue: #0d6efd;
 $indigo: #6610f2;
