--- a/src/app/views/public/quiz/form/form/form.component.scss
+++ b/src/app/views/public/quiz/form/form/form.component.scss
@@ -11,12 +11,22 @@
 }
 
 .quiz-form-main {
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   padding: 0 4rem;
   position: relative;
   gap: 2rem;
+
+
+  @media (max-width: 1024px) {
+    padding: 0 2rem;
+  }
+  @media (max-width: 768px) {
+    padding: 0 1rem;
+  }
+
 
   .quiz-form-progress {
     width: 100%;
