--- a/src/app/views/public/quiz/form/name/name/name.component.html
+++ b/src/app/views/public/quiz/form/name/name/name.component.html
@@ -3,7 +3,7 @@
 
   <div class="form-name-title">
     <h2 class="">{{ "public.quiz.form.name.title" | translate }}</h2>
-    <p>{{ "public.quiz.form.name.subtitle" | translate }}</p>
+<!--    <p>{{ "public.quiz.form.name.subtitle" | translate }}</p>-->
   </div>
 
   <div class="form-name-input">
@@ -13,17 +13,15 @@
         <input matInput placeholder="{{ 'public.quiz.form.name.placeholder' | translate }}" [(ngModel)]="name" name="name" required>
       </mat-form-field>
     </div>
-    <div class="row">
-      <div class="col-6">
-        <button color="primary" class="w-100" mat-raised-button (click)="goBack()" >
-          {{ "public.quiz.form.name.button.back" | translate }}
-        </button>
-      </div>
-      <div class="col-6">
-        <button color="primary" class="w-100" mat-raised-button type="submit">
-          {{ "public.quiz.form.name.button.next" | translate }}
-        </button>
-      </div>
+    <div class="buttons">
+      <button color="primary" class="w-25" mat-raised-button (click)="goBack()" >
+        <i class="fa-solid fa-arrow-left"></i>
+        <!--          {{ "public.quiz.form.name.button.back" | translate }}-->
+      </button>
+      <button color="primary" class="w-50" mat-raised-button type="submit">
+        {{ "public.quiz.form.name.button.next" | translate }}
+        <i class="fa-solid fa-arrow-right arrow"></i>
+      </button>
     </div>
   </div>
 </form>
