--- a/src/app/views/public/quiz/form/name/name/name.component.scss
+++ b/src/app/views/public/quiz/form/name/name/name.component.scss
@@ -23,7 +23,7 @@ form {
 
   .form-name-title {
     text-align: center;
-    flex: 1;
+    flex: 0.5;
 
     h2 {
       font-size: 2.25rem;
@@ -53,7 +53,31 @@ form {
     flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 100%;
     gap: 1rem;
+
+    .buttons {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+  }
+}
+.arrow {
+  position: relative;
+  animation: moveArrow 1.5s ease-in-out infinite;
+}
+
+/* Animação para mover a seta */
+@keyframes moveArrow {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(15px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
