--- a/src/app/views/public/quiz/quiz/quiz.component.scss
+++ b/src/app/views/public/quiz/quiz/quiz.component.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  overflow: hidden;
+  background: black;
 
   .quiz-image {
     display: flex;
@@ -15,6 +17,7 @@
     img {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
 
@@ -27,6 +30,13 @@
     height: 100%;
     z-index: 999;
     padding: 2rem;
+
+    @media (max-width: 1024px) {
+      width: 80%;
+    }
+    @media (max-width: 768px) {
+      width: 100%;
+    }
 
     .quiz-form-main {
       background: white;
