--- a/src/app/views/public/quiz/form/gender/gender/gender.component.html
+++ b/src/app/views/public/quiz/form/gender/gender/gender.component.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="buttons">
-      <button color="primary" class="w-25" mat-raised-button (click)="goBack()" >
+      <button color="primary" class="w-25" mat-raised-button type="button" (click)="goBack()">
         <i class="fa-solid fa-arrow-left"></i>
         <!--          {{ "public.quiz.form.gender.button.back" | translate }}-->
       </button>
