--- a/src/app/views/public/quiz/form/name/name/name.component.html
+++ b/src/app/views/public/quiz/form/name/name/name.component.html
@@ -14,7 +14,7 @@
       </mat-form-field>
     </div>
     <div class="buttons">
-      <button color="primary" class="w-25" mat-raised-button (click)="goBack()" >
+      <button color="primary" class="w-25" mat-raised-button type="button" (click)="goBack()">
         <i class="fa-solid fa-arrow-left"></i>
         <!--          {{ "public.quiz.form.name.button.back" | translate }}-->
       </button>
