wip: Zodarium App public

--- a/src/app/shared/layouts/layout-public/layout-public.component.html
+++ b/src/app/shared/layouts/layout-public/layout-public.component.html
@@ -1,10 +1,7 @@
 <main>
-  <!--  <app-sidebar></app-sidebar>-->
-  <section id="template">
-    <app-header></app-header>
-    <div class="content">
-      <router-outlet></router-outlet>
-    </div>
-    <app-footer></app-footer>
-  </section>
+  <app-layout-public-header class="sticky-header"></app-layout-public-header>
+  <div class="layout-public-content">
+    <router-outlet></router-outlet>
+  </div>
+  <app-layout-public-footer></app-layout-public-footer>
 </main>
