--- a/src/app/shared/layouts/layout-public/layout-public.component.scss
+++ b/src/app/shared/layouts/layout-public/layout-public.component.scss
@@ -1,25 +1,64 @@
-main {
-  width: 100%;
-  height: 100%;
-  background-color: #FFF0F0;
-  display: flex;
-  justify-content: center;
+@import "variables";
 
-  section#template {
-    width: 100%;
-    max-width: 800px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
 
-    .content {
-      width: 100%;
-      height: 100%;
-      border-radius: .5rem;
-      background: linear-gradient(rgb(255, 240, 240) 0%, rgb(255, 251, 251) 34.9%, rgb(255, 251, 251) 77.6%, rgb(255, 240, 240) 100%);
-    }
+.layout-public-content {
+  flex: 1;
+}
+
+
+// Telas grandes
+@media (min-width: $breakpoint-lg) {
+  // Estilos para telas grandes
+  .layout-public-content {
+    padding-left: 20rem !important;
+    padding-right: 20rem !important;
   }
+}
 
+// Laptops
+@media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+  .layout-public-content {
+    padding-left: 10rem !important;
+    padding-right: 10rem !important;
+  }
+}
+
+// Tablets
+@media (min-width: $breakpoint-sm) and (max-width: $breakpoint-md - 1) {
+  .layout-public-content {
+    padding-left: 5rem !important;
+    padding-right: 5rem !important;
+  }
+}
+
+// Smartphones grandes
+@media (min-width: $breakpoint-xs) and (max-width: $breakpoint-sm - 1) {
+  .layout-public-content {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
+
+// Smartphones pequenos
+@media (max-width: $breakpoint-xs - 1) {
+  .layout-public-content {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: $background-color !important;
+}
+
+app-layout-public-footer {
+  margin-top: auto;
 }
