--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,48 +1,41 @@
-@import 'ngx-toastr/toastr';
-@import '@angular/material/prebuilt-themes/indigo-pink.css';
 
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
 
-img {
-  -webkit-user-drag: none; /* Para navegadores baseados em WebKit (Chrome, Safari) */
-  -moz-user-drag: none; /* Para Firefox */
-  -ms-user-drag: none; /* Para Internet Explorer e Edge */
-  user-drag: none;
-}
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Myriad Pro', sans-serif;
-}
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$zodiarium-app-primary: mat.define-palette(mat.$indigo-palette);
+$zodiarium-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
-html, body {
-  height: 100%;
-}
+// The warn palette is optional (defaults to red).
+$zodiarium-app-warn: mat.define-palette(mat.$red-palette);
 
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$zodiarium-app-theme: mat.define-light-theme((
+  color: (
+    primary: $zodiarium-app-primary,
+    accent: $zodiarium-app-accent,
+    warn: $zodiarium-app-warn,
+  ),
+  typography: mat.define-typography-config(),
+  density: 0
+));
 
-::-webkit-scrollbar {
-  width: 5px;
-  height: 2px;
-}
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($zodiarium-app-theme);
 
-/* Track */
-
-::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-/* Handler */
-
-::-webkit-scrollbar-thumb {
-  border-radius: 1rem;
-}
-
-/* Handler on Hover */
-
-::-webkit-scrollbar-track:hover {
-  /*background: #555;*/
-}
+/* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
