fix: Nebula to Zodarium

--- a/src/app/views/public/home/home/home.component.html
+++ b/src/app/views/public/home/home/home.component.html
@@ -9,7 +9,7 @@
       containerClass="moving-box"
       [options]="options">
     </ng-lottie>
-    <p>O Nebula combina dados de diferentes fontes para criar um mapa astrológico personalizado, ao mesmo tempo que
+    <p>O Zodarium combina dados de diferentes fontes para criar um mapa astrológico personalizado, ao mesmo tempo que
       oferece orientação amigável e agradável de astrólogos profissionais. A sua abordagem garante insights
       personalizados
       que tornam a exploração da astrologia divertida e acessível.</p>
@@ -30,7 +30,7 @@
 
   <section class="group-cards section-relacionamentos">
     <h4>Dê um passo em direção a uma vida e relacionamentos mais felizes com milhões de outras pessoas que já estão a
-      beneficiar do Nebula</h4>
+      beneficiar do Zodarium</h4>
     <div class="row w-80">
       @for (item of itemBenefiting; track item) {
         <div class="col-lg-6 col-md-12 mb-3">
