--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,6 @@
 // Paleta de cores
+$primary: #6838A1;
+
 $primary-color: #202260;
 $secondary-color: #EAEEF7;
 $background-color: #FFF0F0;
@@ -25,3 +27,52 @@ $breakpoint-md: 992px;
 $breakpoint-sm: 768px;
 $breakpoint-xs: 576px;
 
+
+$white-100: #ffffff; // used pallet color
+$white-200: #F5F5F5;
+$white-300: #FFFFFF;
+$white-400: #F2F2F2;
+$white-500: #e5e5e5; // used pallet color
+$white-600: #D5D5D5;
+$white-700: #C5C5C5;
+$white-800: #B5B5B5;
+$white-900: #A5A5A5;
+
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #EEEEEE;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+
+$black-100: #8b8b8b;
+$black-200: #717171;
+$black-300: #575757;
+$black-400: #3f3f3f;
+$black-500: #282828;
+$black-600: #121212;
+$black-700: #000000; // used pallet color
+
+// Remover depois
+$white: #FFFFFF;
+$white_opacity: #FFFFFF29;
+$black1: #111111;
+$black2: #2C323F;
+$grey1: #707070;
+$grey2: #00000029;
+$grey3: #E6E9EB80;
+$grey4: #F5F5F5;
+$grey5: #FAFAFA;
+$black_opacity: #00000015;
+$orange1: #EC5200;
+$orange2: #F46A20;
+$orange3: #C05C27;
+$orange1_opacity: #ec7535;
+$orange2_opacity: #f46a209c;
+$orange3_opacity: #F46A2029;
+$red1: #B70606;
+$red2: #ff0000;
+$green1 : #06B76C;
