--- a/src/app/views/private/setting/setting/setting.component.html
+++ b/src/app/views/private/setting/setting/setting.component.html
@@ -1,3 +1,9 @@
+@if(loading){
+  <div class="loading">
+    <mat-spinner></mat-spinner>
+  </div>
+}
+
 <form [formGroup]="form">
   <div class="row">
       <div class="col-12 mb-3">
