--- a/src/app/views/private/setting/setting/setting.component.scss
+++ b/src/app/views/private/setting/setting/setting.component.scss
@@ -78,3 +78,10 @@
   background: $primary;
   color: $white-100;
 }
+
+.loading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
