wip: birth-date

--- a/src/app/shared/layouts/layout-public/layout-public-header/layout-public-header.component.html
+++ b/src/app/shared/layouts/layout-public/layout-public-header/layout-public-header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="logo">{{ title }}</div>
+  <div routerLink="/" class="logo">{{ title }}</div>
   <!--<nav>
     <a routerLink="/">Home</a>
     <a routerLink="/about">Sobre</a>
