--- a/src/app/views/public/quiz/quiz/quiz.component.scss
+++ b/src/app/views/public/quiz/quiz/quiz.component.scss
@@ -80,6 +80,8 @@
       justify-content: center;
       gap: 0.5rem;
       margin-bottom: 2rem;
+      padding-left: 3rem;
+      padding-right: 3rem;
 
       .quiz-form-progress-icons {
         display: flex;
@@ -98,7 +100,7 @@
 
           img {
             width: 40px;
-            opacity: 0.7;
+            opacity: 0.5;
             z-index: 99;
           }
 
