--- a/src/app/views/public/quiz/birth-date/birth-date.component.html
+++ b/src/app/views/public/quiz/birth-date/birth-date.component.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="w-100 d-flex justify-content-center align-items-center">
-      <button class="button-birth-date" routerLink="/quiz/sign">Continuar</button>
+      <button class="button-birth-date" routerLink="/quiz/sign" (click)="saveDate()">Continuar</button>
     </div>
   </div>
 </div>
