--- a/src/app/views/private/setting/setting/setting.component.scss
+++ b/src/app/views/private/setting/setting/setting.component.scss
@@ -32,8 +32,8 @@
 }
 
 .uploaded-image {
-  width: 100%;
-  height: 100%;
+  max-width: 200px;
+  max-height: 200px;
   object-fit: cover;
   border-radius: 8px;
 }
