--- a/src/app/shared/components/account-manager/account-manager.component.scss
+++ b/src/app/shared/components/account-manager/account-manager.component.scss
@@ -18,12 +18,18 @@ main {
   .form-section {
     flex-grow: 0.5;
     padding: 0 35px;
-    max-width: 500px;
+    max-width: 500px;    
+    margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: start;
 
+    a{
+      color: white;
+    }
+
     .form-main {
+      width: 100%;
       padding-top: 35px;
       flex: 1;
       display: flex;
@@ -31,10 +37,13 @@ main {
 
       img {
         width: 40%;
+        margin: 0 auto;
       }
 
       .form-container {
         display: flex;
+        margin: 0 auto !important;
+        width: 100% !important;
         flex: 1;
         align-items: start;
         justify-content: center;
@@ -59,7 +68,7 @@ main {
   .display-animation {
     gap: 0.5rem;
     flex-grow: 1;
-    background-color: $primary-color;
+    background-color: #000000;
     color: white;
     text-transform: uppercase;
   }
