--- a/src/app/shared/layouts/layout-private/header-private/header-private.component.scss
+++ b/src/app/shared/layouts/layout-private/header-private/header-private.component.scss
@@ -73,6 +73,11 @@ header {
 
       }
 
+      .dropdown-btn {
+        min-width: 180px;
+        color: white;
+      }
+
       @media only screen and (max-width: 800px) {
         .dropdown-btn {
           min-width: auto !important;
@@ -89,6 +94,11 @@ header {
 
       .dropdown-btn {
         min-width: 180px;
+        color: white;
+
+        &:hover{
+          color: white !important;
+        }
       }
 
       .dropdown-content {
@@ -105,7 +115,6 @@ header {
 
         .dropdown-item {
           cursor: pointer;
-          color: $black-300;
           padding: 15px 16px;
           text-decoration: none;
           display: flex;
@@ -115,7 +124,7 @@ header {
 
           &:hover {
             background-color: $primary;
-            color: $black-600;
+            color: white;
             box-shadow: 0 0 10px 0 rgba(223, 198, 255, 0.37);
           }
 
