--- a/src/app/views/private/lead/lead/lead.component.html
+++ b/src/app/views/private/lead/lead/lead.component.html
@@ -1,7 +1,7 @@
 <div id="componentHeaderTemplate" class="mt-3">
   <div id="componentHeader">
       <div id="buttons">
-        <button matRipple class="button">
+        <button matRipple class="button" (click)="export()">
           <i class="fa-solid fa-file-export"></i> Exportar PDF
         </button>
     </div>
