--- a/src/app/views/private/product/product/product.component.html
+++ b/src/app/views/private/product/product/product.component.html
@@ -1,14 +1,16 @@
 <div id="componentHeaderTemplate" class="mt-3">
     <div id="componentHeader">
         <div id="buttons">
-          <button matRipple class="button">
-            <i class="fa-solid fa-file-export"></i> Exportar PDF
+          <button matRipple class="button" (click)="openDialogProduct()">
+            <i class="fa-solid fa-plus"></i> Adicionar produto
           </button>
       </div>
     </div>
     <div id="componentTable" class="col-12 mt-4">
-      <app-table-client [loading]="loading" [type]="'Client'">
-      </app-table-client>
+      <app-table-product
+      [loading]="loading"
+      (onClick)="openDialogProduct($event)">
+      </app-table-product>
     </div>
   </div>
   
