--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,20 @@
 // Paleta de cores
 $primary: #6838A1;
 
+$blue: #0d6efd;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #198754;
+$teal: #20c997;
+$cyan: #0dcaf0;
+
+$yellow_opacity: #ecbc2bda;
+$yellow_2: #fbf9ed;
+
 $primary-color: #202260;
 $secondary-color: #EAEEF7;
 $background-color: #FFF0F0;
