feat: implementa compras e relatório demo

--- a/src/app/views/public/quiz/gender/gender.component.html
+++ b/src/app/views/public/quiz/gender/gender.component.html
@@ -1,5 +1,5 @@
 <div class="gender-header">
-  <h3>Escolha o seu géneros</h3>
+  <h3>Selecione o seu gênero</h3>
   <p>Ajuda-nos a personalizar o seu horóscopo</p>
 </div>
 <div class="gender-container">
