--- a/src/app/views/private/setting/setting/setting.component.html
+++ b/src/app/views/private/setting/setting/setting.component.html
@@ -47,11 +47,11 @@
       <div class="col-md-6 col-12">
         <mat-form-field appearance="outline">
           <mat-label>Telefone da companhia</mat-label>
-          <input type="text" formControlName="company_phone" matInput mask="(00)0000-0000"
-            title="Digite um número de telefone válido (xx)xxxx-xxxx ou (xx)xxxxx-xxxx" />
+          <input type="text" formControlName="company_phone" matInput mask="000 000 000"
+            title="Digite um número de telefone válido 000 000 000" />
           <mat-error *ngIf="form.get('company_phone')?.value === '' || !validatePhoneNumber(form.get('company_phone'))">O telefone deve
             estar no formato válido
-            (xx)xxxx-xxxx.</mat-error>
+            000 000 000.</mat-error>
         </mat-form-field>
       </div>
 
