--- a/src/app/views/public/quiz/send/send.component.html
+++ b/src/app/views/public/quiz/send/send.component.html
@@ -17,18 +17,9 @@
         </mat-form-field>
 
         <mat-form-field class="w-100">
-          <mat-label>DDI</mat-label>
-          <mat-select [(ngModel)]="formData.ddi" name="ddi" id="ddi">
-            <mat-option *ngFor="let ddi of ddiList" [value]="ddi.code">
-              {{ ddi.name }} ({{ ddi.code }})
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-
-        <mat-form-field class="w-100">
           <mat-label>Telefone</mat-label>
-          <input type="text" matInput [(ngModel)]="formData.phone" name="phone" id="phone" [mask]="'(00) 000 0000'"
-                 placeholder="(xx) xxx xxxx" />
+          <input type="text" matInput [(ngModel)]="formData.phone" name="phone" id="phone" [mask]="'000 000 000'"
+                 placeholder="000 000 000" />
         </mat-form-field>
 
         <div class="w-100 d-flex justify-content-center align-items-center">
