--- a/src/app/views/public/sale/sale/sale.component.html
+++ b/src/app/views/public/sale/sale/sale.component.html
@@ -14,7 +14,7 @@
                 Você sabia que sua data, hora e local de nascimento revelam detalhes incríveis sobre sua personalidade, desafios e oportunidades na vida? <br>            
             </p>
             <div class="d-flex justify-content-end">
-                <button class="buy-button pulsating">Comprar por € {{ mainProduct.amount }}</button>
+                <button (click)="openDialogProduct(mainProduct.id)" class="buy-button pulsating">Comprar por € {{ mainProduct.amount }}</button>
             </div>
           </div>
         </div>
@@ -32,19 +32,7 @@
                 <p>{{ product.title }}</p>
                 </div>
             </div>
-            <button class="buy-button pulsating">Comprar Oferta por € {{ bundle.sum }}</button>
+            <button class="buy-button pulsating" (click)="openDialogProduct('bundle')">Comprar Oferta por € {{ bundle.sum }}</button>
             </div>
-      </div>
-      
-      <div *ngIf="upsellProducts.length > 0" class="upsell-section">
-        <h3>Outras pessoas também compraram</h3>
-        <div *ngFor="let product of upsellProducts" class="upsell-card">
-          <img [src]="product.image" alt="{{ product.title }}" class="upsell-image" />
-          <div class="upsell-details">
-            <h3>{{ product.title }}</h3>
-            <p>Melhore sua experiência com este complemento incrível!</p>
-            <button class="buy-button pulsating">Comprar por € {{ product.amount }}</button>
-          </div>
-        </div>
-      </div>    
+      </div>   
 </div>
