fix: ajusta logos do sistema

--- a/src/app/shared/layouts/layout-public/layout-public-header/layout-public-header.component.html
+++ b/src/app/shared/layouts/layout-public/layout-public-header/layout-public-header.component.html
@@ -1,5 +1,7 @@
 <header>
-  <div routerLink="/" class="logo">{{ title }}</div>
+  <!-- <div routerLink="/" class="logo">{{ title }}</div> -->
+  <img class="logo" src="./assets/images/logo.png" alt="logo">
+  
   <!--<nav>
     <a routerLink="/">Home</a>
     <a routerLink="/about">Sobre</a>
