--- a/src/app/views/public/home/home/home.component.html
+++ b/src/app/views/public/home/home/home.component.html
@@ -5,10 +5,12 @@
       feito especialmente para si.</p>
     <button class="button-home" routerLink="/quiz">Fazer o questionário</button>
     <h4>Entre no mundo da Astrologia Hiperpersonalizada</h4>
-    <ng-lottie
+    <img class="zodiac_sing" src="./assets/images/zodiac-sing.png" alt="logo">
+
+    <!-- <ng-lottie
       containerClass="moving-box"
       [options]="options">
-    </ng-lottie>
+    </ng-lottie> -->
     <p>O Zodarium combina dados de diferentes fontes para criar um mapa astrológico personalizado, ao mesmo tempo que
       oferece orientação amigável e agradável de astrólogos profissionais. A sua abordagem garante insights
       personalizados
