--- a/src/app/shared/layouts/layout-public/layout-public-header/layout-public-header.component.scss
+++ b/src/app/shared/layouts/layout-public/layout-public-header/layout-public-header.component.scss
@@ -20,6 +20,8 @@ header {
   .logo {
     font-weight: bold;
     font-size: 1.5em;
+    max-height: 80px;
+    margin: 0 auto;
     cursor: pointer;
   }
 
