--- a/src/app/shared/components/account-manager/account-manager.component.html
+++ b/src/app/shared/components/account-manager/account-manager.component.html
@@ -1,7 +1,10 @@
 <main>
   <section class="form-section">
-    <div class="form-main">
+    <div class="logo-container">
       <img src="./assets/images/logo.png" alt="logo">
+    </div>
+    <div class="form-main">
+      
       <div class="form-container">
         <h2>{{ primary_text }}</h2>
         <ng-content></ng-content>
