--- a/src/app/shared/components/account-manager/account-manager.component.scss
+++ b/src/app/shared/components/account-manager/account-manager.component.scss
@@ -13,6 +13,18 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    .logo-container{
+      width: 100%;
+      margin-top: 20px;
+      background: rgb(0, 9, 22);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img{
+        height: 80px;
+      }
+    }
   }
 
   .form-section {
@@ -21,6 +33,7 @@ main {
     max-width: 500px;    
     margin: 0 auto;
     display: flex;
+    background: rgb(255, 255, 255);
     justify-content: center;
     align-items: start;
 
@@ -68,7 +81,7 @@ main {
   .display-animation {
     gap: 0.5rem;
     flex-grow: 1;
-    background-color: #000000;
+    background-color: #010a16;
     color: white;
     text-transform: uppercase;
   }
