--- a/src/app/shared/dialogs/dialog-sale/dialog-sale.component.scss
+++ b/src/app/shared/dialogs/dialog-sale/dialog-sale.component.scss
@@ -78,11 +78,12 @@
   
   .upsell-card {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     align-items: center;
     background: #f8f8f8;
     padding: 1rem;
-    margin: 1rem 0;
+    margin: 0 auto;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
