--- a/src/app/views/public/quiz/birth-date/birth-date.component.html
+++ b/src/app/views/public/quiz/birth-date/birth-date.component.html
@@ -2,8 +2,8 @@
   <div class="birth-date-card">
     <div class="birth-date-card-header">
       <h3>Selecione a sua data de nascimento</h3>
-      <p>Selecione a data de nascimento para obter um plano personalizado</p>
-    </div>
+      <p>Escolha a data de nascimento para obter um plano personalizado</p>
+    </div>    
     <div class="lottie-container">
       <ng-lottie
         containerClass="moving-box"
