--- a/src/app/views/public/quiz/send/send.component.html
+++ b/src/app/views/public/quiz/send/send.component.html
@@ -1,7 +1,7 @@
 <div class="send-container">
   <div class="send-card">
     <div class="send-card-header">
-      <h3>Informe seu email e telefone para receber seu relatório completo.</h3>
+      <h3>Informe o seu email e telefone para receber o seu relatório completo.</h3>
     </div>
 
     <div class="send-card-body">
