--- a/src/app/views/public/sale/sale/sale.component.html
+++ b/src/app/views/public/sale/sale/sale.component.html
@@ -10,8 +10,8 @@
           <div class="product-details">
             <h2>{{ mainProduct.title }}</h2>
             <p>
-                Descubra os segredos do seu destino com o nosso relatório Personalizado! <br>
-                Você sabia que sua data, hora e local de nascimento revelam detalhes incríveis sobre sua personalidade, desafios e oportunidades na vida? <br>            
+                Descubra os segredos do seu destino com o nosso relatório personalizado! <br>
+                Sabia que a sua data, hora e local de nascimento revelam detalhes incríveis sobre a sua personalidade, desafios e oportunidades na vida? <br>            
             </p>
             <div class="d-flex justify-content-end">
                 <button (click)="openDialogProduct(mainProduct.id)" class="buy-button pulsating">Comprar por € {{ mainProduct.amount }}</button>
