--- a/src/app/shared/layouts/layout-public/layout-public-footer/layout-public-footer.component.html
+++ b/src/app/shared/layouts/layout-public/layout-public-footer/layout-public-footer.component.html
@@ -1,7 +1,10 @@
 <footer>
   <mat-divider></mat-divider>
   <p>© 2024
-    <a href="https://ksoftware.com.br" target="_blank">
-      ksoftware</a>.
-    Todos os direitos reservados. v{{version}}</p>
+    <a href="#">zodiarium</a>.
+    |
+    <a href="https://zodiarium.com:3000/privacy-policies">Politicas de privacidade</a>
+    |
+    <a href="mailto:contacto@zodiarium.com">Entrar em contato</a>
+  </p>
 </footer>
