--- a/src/app/views/public/quiz/city/city.component.html
+++ b/src/app/views/public/quiz/city/city.component.html
@@ -5,8 +5,8 @@
     <ng-container *ngIf="!loading">
       <div class="city-card-header">
         <h3>Especifique o seu local de nascimento</h3>
-        <p>Utilizamos esta informação para determinar a posição e a influência dos planetas no seu mapa natal.</p>
-      </div>
+        <p>Utilizamos esta informação para determinar a posição e a influência dos planetas no seu mapa astral.</p>
+      </div>      
 
       <!-- Campo de Autocomplete -->
       <mat-form-field style="width: 330px;">
