--- a/src/app/views/public/quiz/hour-of-the-day/hour-of-the-day.component.html
+++ b/src/app/views/public/quiz/hour-of-the-day/hour-of-the-day.component.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="w-100 d-flex justify-content-center align-items-center">
-      <button class="button-hour-of-the-day" routerLink="/quiz/gender">Continuar</button>
+      <button class="button-hour-of-the-day" (click)="navigateToQuiz('/quiz/gender')">Continuar</button>
     </div>
   </div>
 </div>
