--- a/src/app/views/public/quiz/sign/sign.component.html
+++ b/src/app/views/public/quiz/sign/sign.component.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="w-100 d-flex justify-content-center align-items-center">
-      <button class="button-sign" routerLink="/quiz/city" [disabled]="!data?.zodiacSign">Continuar</button>
+      <button class="button-sign" (click)="navigateToQuiz('/quiz/city')" [disabled]="!data?.zodiacSign">Continuar</button>
     </div>
   </div>
 </div>
