test: teste de navegação IOS prod

--- a/src/app/views/public/home/home/home.component.html
+++ b/src/app/views/public/home/home/home.component.html
@@ -3,7 +3,7 @@
     <h3>Navegue pelos desafios da vida com a astrologia como seu guia</h3>
     <p>Comece a sua jornada de autodescoberta hoje ao completar o nosso questionário e receber um plano personalizado
       feito especialmente para si.</p>
-    <button class="button-home" (click)="navigateToQuiz('/quiz')">Fazer o questionário</button>
+    <button class="button-home" (click)="navigateToQuiz('/quiz', $event)">Fazer o questionário</button>
     <h4>Entre no mundo da Astrologia Hiperpersonalizada</h4>
     <img class="zodiac_sing" src="./assets/images/zodiac-sing.png" alt="logo">
     <!-- <ng-lottie
