fix: corrige for iphone

--- a/src/app/shared/layouts/layout-public/layout-public-footer/layout-public-footer.component.html
+++ b/src/app/shared/layouts/layout-public/layout-public-footer/layout-public-footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-  <mat-divider></mat-divider>
+  <mat-divider style="margin-bottom: 1rem"></mat-divider>
   <p>© 2024
     <a href="#">zodiarium</a>.
     |
