fix: corrige quando os upsells devem aparecer

--- a/src/app/shared/dialogs/dialog-sale/dialog-sale.component.html
+++ b/src/app/shared/dialogs/dialog-sale/dialog-sale.component.html
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <div *ngIf="upsellProducts" class="upsell-section">
+      <div *ngIf="upsellProducts?.length" class="upsell-section">
         <div class="upsell-card">
             <div class="promotion">
                 <h3 class="text-center">Outras pessoas também compraram:</h3>
