--- a/src/app/views/public/sale/sale/sale.component.html
+++ b/src/app/views/public/sale/sale/sale.component.html
@@ -14,7 +14,7 @@
                 Sabia que a sua data, hora e local de nascimento revelam detalhes incríveis sobre a sua personalidade, desafios e oportunidades na vida? <br>            
             </p>
             <div class="d-flex justify-content-end">
-                <button (click)="openDialogProduct(mainProduct.id)" class="buy-button pulsating">Comprar por € {{ mainProduct.amount }}</button>
+                <button (click)="openDialogProduct('main')" class="buy-button pulsating">Comprar por € {{ mainProduct.amount }}</button>
             </div>
           </div>
         </div>
