--- a/src/app/shared/dialogs/dialog-sale/dialog-sale.component.scss
+++ b/src/app/shared/dialogs/dialog-sale/dialog-sale.component.scss
@@ -16,7 +16,7 @@
 
 #submit{
     width: 100%;
-    background: green;
+    background: rgb(0, 113, 133);
     color: white;
     font-weight: 600;
     border: none;
@@ -78,6 +78,7 @@
   
   .upsell-card {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
@@ -87,23 +88,51 @@
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
-    button{
-        background: red;
-        color: yellow;
-        border: none;
-        border-radius: 8px;
-        padding: 8px;
-        font-weight: 600;
-    }
-  }
+    .upsell-products{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      width: 100%;
 
-  .upsell-image {
-    width: 80%;
-    border-radius: 10px;
-    object-fit: cover;
-  }
-  
-  .upsell-details {
-    flex: 1;
-    padding: 20px 0 0 20px;
+      .upsell-product{
+        width: 90%;
+        max-width: 150px;
+        margin: 0 10px;
+
+        p{
+          display: inline-block;
+          width: 100%;
+          height: 40px;
+          text-align: center;
+        }
+
+        .upsell-image {
+          border-radius: 10px;
+          object-fit: cover;
+        }
+        
+        .upsell-details {
+          flex: 1;
+          padding: 20px 0 0 20px;
+        }
+
+        button{
+          margin-top: 5px;
+          background: red;
+          color: yellow;
+          border: none;
+          border-radius: 8px;
+          padding: 5px;
+          width: 100%;
+          font-weight: 0.9rem;
+          font-weight: 600;
+        }
+        .incluse{
+          color: green;
+          border: 1px solid green;
+          background: white;
+        }
+      }
+    }
   }
